fix screenshot alignment for root

--- a/sherloc/webstatic/style.css
+++ b/sherloc/webstatic/style.css
@@ -457,10 +457,8 @@ table.appinfo th {
     float: left;
 }
 
-.screenshot-container::after {
-  content: "";
-  clear: both;
-  display: table;
+.screenshot-container {
+    margin-bottom: 0px;
 }
 
 table.appselect > tbody > tr > td > p {
